# tinjis

./: Makefile  README.md  deploy.sh  docker-compose.yml
.github/workflows/: docker-image.yml
deploy/: antaeus.yaml  generated.yaml  provider.yaml
deploy/dhall/: deployment.dhall  functions.dhall  ingress.dhall  microservices.dhall  service.dhall
kybernetes/: antaeus-service.yml  anteus-service.yml  deployment-antaeus.yml  deployment-payment.yml  payment-service.yml
payment/: dockerfile  payment.js
provider/: Cargo.toml  Dockerfile  Makefile
provider/src/: main.rs
testclient/: Cargo.toml  Dockerfile  Makefile
testclient/src/: main.rs
