[package]
name = "testclient"
version = "0.1.0"
authors = ["Alex Humphreys <alex.humphreys@here.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
simple-error = { version = "0.1.9" }
retry = "1.2.0"
serde = { version = "1.0.117", features = ["derive"] }
